# Practical-Machine-Learning-on-Databricks

./: README.md  databricks.yml  pyproject.toml
Chapter-03/: churn-analysis.uc.polarize.ipynb  churn-analysis.uc.polarize.py  churn-analysis.uc.py
Chapter-04/: mlflow-with-featurestore.uc.ipynb  mlflow-with-featurestore.uc.py  mlflow-without-featurestore.uc.ipynb  mlflow-without-featurestore.uc.py
Chapter-06/legacy/: model-registry-and-webhooks.uc.py
Chapter-07/: batch-and-streaming.uc.ipynb  batch-and-streaming.uc.py
